--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,68 +1,57 @@
-html,body, #root,#App{
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+:root {
+  --bg-dark: #1A2F3A;
+
+  --nav-height: 50px;
+  --footer-height: 40px;
+
+  --shadow:
+    0 2px 23px 0 rgba(0, 0, 0, 0.1),
+    0 2px 49px 0 rgba(0, 0, 0, 0.06);
 }
 
-body{
-    --bs-body-bg: rgb(159, 187, 230) ;
-    min-width: 700px;
-} 
-
-header{
-    padding: 10px 10px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-right: auto;
-    margin-left: auto;
-    width: max-content;
-    border: solid rgb(100, 87, 87) 3px;
-    border-radius: 50px;
-    
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-nav{
-    
-    color: aliceblue;
-    background-color: rgb(4, 4, 97);
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
 
-#tituloEmpresa{
-    
-    padding: 0px;
-    margin: 0px;
-    
+.App {
+  margin: 0px;
+  display: grid;
+  grid-template-columns: var(--aside-width) 1fr;
+  grid-template-rows:
+  var(--nav-height) 1fr var(--footer-height);
+  grid-template-areas:
+    "nav"
+    "content"
+    "footer";
+  height: 100vh;
+  background-color: #F5F5F5;
 }
 
-ul{
-    
-    margin-left: 20px;
+nav {
+  grid-area: nav;
+  background-color: #e3f2fd;
 }
 
-#headerSection{
-   margin-top: 100px;
+main.content {
+  grid-area: content;
 }
 
-#sectionContent{
-    padding-left: 0px;
-}
-
-#cadastroCliente, #cadastroContainer, #cadastroMovimentacao,#dashboard,#registros{
-    display: none;
-    margin: 10px 0px;
-}
-
-#botao{
-    padding: 20px 20px;
-}
-
-.dashContainer, row > .dashContainer{
-    margin: 0px 0px;
-    padding: 10px;
-}
-
- .conteudoRegistros{
-    margin:10px 10px;
-    padding: 10px;
+footer {
+  grid-area: footer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 25px;
+  background-color: #e3f2fd;
+  box-shadow: var(--shadow);
 }
