--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@
 
   --nav-height: 50px;
   --footer-height: 40px;
-
+  --background-nav-footer: #005796;
   --shadow:
     0 2px 23px 0 rgba(0, 0, 0, 0.1),
     0 2px 49px 0 rgba(0, 0, 0, 0.06);
@@ -16,6 +16,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
@@ -33,17 +34,18 @@ code {
     "nav"
     "content"
     "footer";
+  
   height: 100vh;
-  background-color: #F5F5F5;
 }
 
 nav {
   grid-area: nav;
-  background-color: #e3f2fd;
+  background-color: var(--background-nav-footer);
 }
 
 main.content {
   grid-area: content;
+  background-color: #F5F5F5;
 }
 
 footer {
@@ -52,6 +54,17 @@ footer {
   align-items: center;
   justify-content: center;
   padding: 0 25px;
-  background-color: #e3f2fd;
+  background-color: var(--background-nav-footer);
   box-shadow: var(--shadow);
 }
+
+.bg-default {
+  --bs-table-bg: var(--background-nav-footer);
+  --bs-table-color: white;
+  background-color: var(--background-nav-footer) !important;
+  color: white !important;
+}
+
+/* .breadcrumb-item+.breadcrumb-item::before{
+  color: white !important;
+} */
